--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 ---
-layout: default
-title: mc.mroberts.me
+layout: home
+title: home
 ---
 
 <div id="home">
-  <h1>{{page.title}}</h1>
-  <p>A survival Minecraft server run by <a href="http://twitter.com/eruraindil">@eruraindil</a>.
-  <!--{{ content }}-->
-  <!-- <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul> -->
+  <p></p>
 </div>
