--- a/index.html
+++ b/index.html
@@ -4,5 +4,21 @@ title: home
 ---
 
 <div id="home">
-  <p></p>
+  <p class="lead">A Minecraft survival server run by <code>eruraindil</code>.</p>
+  <p>For more information, contact @eruraindil, or email contact@mroberts.me.</p>
 </div>
+
+<h2 id="news">News</h2>
+{% for post in site.posts %}
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h3 class="panel-title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    </div>
+    <div class="panel-body">
+      {{ post.excerpt }}
+    </div>
+    <div class="panel-footer">
+      Posted {{ post.date | date_to_string }}
+    </div>
+  </div>
+{% endfor %}
